<resources>
    <string name="app_name">TODO - Organize your activities</string>

    <!-- Action bar -->
    <string name="sort_action">Sort</string>
    <string name="natural_sort">Natural Order</string>
    <string name="priority_sort">Priority Order</string>

    <string name="filter_action">Filter</string>

    <!-- List page-->
    <string name="add_button">Add TODO</string>
    <string name="hint_value">TODO name</string>
    <string name="todo_added_toast">Todo added correctly</string>
    <string name="todo_removed_toast">Todo removed correctly</string>

    <!-- Detail page-->
    <string name="update_button">UPDATE</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="todo_updated_toast">Todo updated correctly</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="filter_label">Filter TODO</string>
    <string name="update_filters">UPDATE FILTERS</string>
    <string name="todo_undo_removed">UNDO</string>
    <string name="name_required_error">Name is required</string>
</resources>
