<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_action"
        android:icon="@drawable/filter_icon"
        android:title="@string/filter_action"
        app:showAsAction="ifRoom" >
    </item>

    <item
        android:id="@+id/sort_action"
        android:checkable="false"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort_action"
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/sort_natural_order"
                android:title="@string/natural_sort"
                app:showAsAction="withText" />
            <item
                android:id="@+id/sort_priority_order"
                android:title="@string/priority_sort"
                app:showAsAction="withText" />
        </menu>
    </item>
</menu>