<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/DialogStyle"
    app:cardBackgroundColor="#23272A"
    app:cardCornerRadius="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_todo_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_label"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@android:color/white"
                android:textColorLink="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="@id/name_input_create"
            app:layout_constraintStart_toStartOf="@id/name_input_create"
            app:layout_constraintTop_toBottomOf="@+id/name_input_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_todo_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_label"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@android:color/white"
                android:textColorLink="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/PriorityGroup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:checkedButton="@id/LowPriority"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/description_input_create"
            app:layout_constraintStart_toStartOf="@+id/description_input_create"
            app:layout_constraintTop_toBottomOf="@+id/description_input_create">

            <RadioButton
                android:id="@+id/LowPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#00BCD4"
                android:text="@string/low_priority"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/MediumPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#FFEB3B"
                android:text="@string/medium_priority"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/HighPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#FF0000"
                android:text="@string/high_priority"
                android:textColor="@android:color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PriorityGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
