<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23272A"
    android:clickable="false"
    android:focusable="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".fragments.TodoDetailFragment">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="50dp"
            android:gravity="bottom"
            android:paddingTop="3dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:cursorVisible="true"
                android:hint="@null"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="1dp"
            android:gravity="bottom"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:cursorVisible="true"
                android:gravity="start"
                android:inputType="textCapSentences"
                android:maxLength="250"
                android:maxLines="10"
                android:minLines="3"
                android:padding="5dp"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/PriorityGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <RadioButton
                android:id="@+id/LowPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#00BCD4"
                android:text="@string/low_priority"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/MediumPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#FFEB3B"
                android:text="@string/medium_priority"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/HighPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#FF0000"
                android:text="@string/high_priority"
                android:textColor="@android:color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="70dp"
            android:background="@color/colorPrimary"
            android:text="@string/update_button"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/PriorityGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>